# ocr_poc

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
agent_poc/: azure_blob_saver.py  image_transcription.py  main.py
ocr_poc/: __init__.py  api_pipeline.py  config.py  datalab_client.py  datalab_writer.py  document_pipeline.py  document_writer.py  image_loader.py  image_repository.py  legacy_validation.py  models.py  normalization.py  ocr_client.py  openai_client.py  parser.py  pipeline.py  report.py  result_writer.py
ocr_poc/extraction/: fields.py
ocr_poc/providers/: __init__.py  gdocai_provider.py
ocr_poc/quality/: gate.py
ocr_poc/validation/: __init__.py  engine.py
scripts/: ab_compare.py  gdocai_debug.py
