[project]
name = "ocr-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chandra-ocr",
    "dotenv>=0.9.9",
    "openai>=2.6.1",
    "reportlab>=4.4.4",
]

[tool.uv.sources]
chandra-ocr = { git = "https://github.com/datalab-to/chandra" }
